<resources xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JB Control Center</string>
    <string name="user_interface">Interface</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_main_activity_change_locale">Blank!</string>
    <string name="header_statusbar">Status Bar</string>
    <string name="header_navbar">Magic Navigation Controls</string>
    <string name="toggles_layout">Toggles</string>
    <string name="general_ui">Magical UI</string>
    <string name="clock">Clock</string>
    <string name="battery">Battery</string>
    <string name="signal">Signal</string>
    <string name="nav_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="header_system">System</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="tools">Tools</string>
    <string name="keyboard_header">Keyboard Options</string>
    <string name="title_ui">Magical UI</string>
    <string name="title_statusbar_clock">Statusbar Clock</string>
    <string name="title_statusbar_toggles">Statusbar Toggles</string>
    <string name="title_statusbar_battery">Statusbar Battery</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led">LED Control</string>
    <string name="title_lockscreens">Lockscreen Options</string>
    <string name="title_lockscreens_targets">Lockscreen Targets</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_sound">Sound Settings</string>
    <string name="title_weather">Weather Settings</string>
    <string name="title_performance">Performance Settings</string>
    <string name="title_clipboard_share">Share to Clipboard</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="header_summary_clock">@null</string>
    <string name="header_summary_toggles">@null</string>
    <string name="header_summary_powerwidget">@null</string>
    <string name="header_summary_general_ui">@null</string>
    <string name="header_summary_battery">@null</string>
    <string name="header_summary_signal">@null</string>
    <string name="header_summary_navigation_bar">@null</string>
    <string name="header_summary_power_menu">@null</string>
    <string name="header_summary_led">@null</string>
    <string name="header_summary_sound">@null</string>
    <string name="header_summary_performance">@null</string>
    <string name="header_summary_lockscreens">@null</string>
    <string name="header_summary_weather">@null</string>
    <string name="header_summary_vibrations">@null</string>
    <string name="pie_controls_summary">@null</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_navbar_hide">System Bar toggles</string>
    <string name="title_show_reboot_keyguard">LockScreen Reboot</string>
    <string name="summary_show_reboot_keyguard">Security Mode..Off to show reboot on lockscreen</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="summary_expanded_desktop">%1$s</string>
    <string name="expanded_desktop_summary">Show or change expanded desktop mode</string>
    <string name="expanded_desktop_disabled">Off</string>
    <string name="expanded_desktop_only_nav_bar">Hide navigation bar</string>
    <string name="expanded_desktop_only_status_bar">Hide status bar</string>
    <string name="expanded_desktop_both_hidden">Hide navigation and status bar</string>
    <string name="auto_hide_statusbar">Auto Hide statusbar</string>
    <string name="auto_hide_statusbar_summary">Statusbar hides itself when there are no notifications</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="group_applications">Applications</string>
    <string name="bootani_cat">Boot Animation</string>
    <string name="navbar_cat">Recents</string>
    <string name="notification_cat">Notification</string>
    <string name="tabletUI_cat">Tablet UI</string>
    <string name="enable_volume_options">Enable Volume Panel</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="vibrate_notif_expand_title">Vibrate on expand</string>
    <string name="vibrate_notif_expand_summary">Vibrate when expanding notifications (System UI will Restart)</string>
    <string name="disable_bootanimation_title">Disable boot animation</string>
    <string name="custom_bootanimation_title">Custom boot animation</string>
    <string name="custom_bootanimation_summary">Select bootanimation zip from sdcard. Previous bootanimation will be backed up to /system/media.</string>
    <string name="install_file_manager_error">No application found to pick the zip file. Please install a file manager.</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="alpha_dialog_title">Set alpha value</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="custom_carrier_label_explain">Please enter a new label. Enter an empty label to revert to stock label.</string>
    <string name="custom_carrier_label_notset">Custom label currently not set</string>
    <string name="ime_switcher_title">Show IME Switcher</string>
    <string name="ime_switcher_summary">In statusbar while typing</string>
    <string name="lefty_mode_title">Lefty Mode</string>
    <string name="lefty_mode_summary">Swap NavBar location (requires UI restart)</string>
    <string name="rotate_180_title">Allow 180 degree rotation</string>
    <string name="rotate_180_summary">Allow your device to rotate upside down!</string>
    <string name="recent_kill_all">Enable kill-all-button</string>
    <string name="recent_kill_all_summary">Displays a button to kill all apps on recents window</string>
    <string name="ram_bar">Recents RAM Bar</string>
    <string name="ram_bar_summary">Shows RAM usage in the recents menu</string>
    <string name="kill_app_longpress_back">Hold back to kill</string>
    <string name="kill_app_longpress_back_summary">Holding back will kill the current activity</string>
    <string name="tablet_ui">Force Tablet UI</string>
    <string name="tablet_ui_summary">This will switch to Tablet UI (requires reboot)</string>
    <string name="hide_extras">Hide Extras</string>
    <string name="hide_extras_summary">Hide some systembar stuff i.e. the compat. mode button</string>
    <string name="bootanimation_preview">Bootanimation preview</string>
    <string name="apply">Apply</string>
    <string name="creating_preview">Creating preview...</string>
    <string name="error_reading_zip_file">Error reading zip file</string>
    <string name="error_creating_preview">Error creating preview</string>
    <string name="alt_resolver">Use Alt Default App Grid</string>
    <string name="lcd_density_title">LCD Density</string>
    <string name="lcd_density_summary">unknown</string>
    <string name="toggles_per_row_title">Toggles per row</string>
    <string name="toggles_per_row_summary">Choose how many toggles to show per row</string>
    <string name="toggles_style_title">Toggles style</string>
    <string name="toggles_style_summary">Notification (traditional) or tiles</string>
    <string name="toggle_favcontact_title">Contact #1</string>
    <string name="toggle_favcontact_summary">Choose your favorite contact</string>
    <string name="toggle_dialog_arrange_title">Toggle setup</string>
    <string name="custom_toggle_cat">Custom toggle</string>
    <string name="custom_button_cat">Custom toggle actions</string>
    <string name="dclick_action_title">Double-click Actions</string>
    <string name="dclick_action_summary">Change state by double-clicking</string>
    <string name="boot_action_title">State one at boot</string>
    <string name="boot_action_summary">Will launch state one on boot</string>
    <string name="match_icon_action_title">Launch displayed action</string>
    <string name="match_icon_action_summary">Useful for aligning task to displayed icon per your specific usage</string>
    <string name="advanced_toggle_title">Advanced or Basic actions</string>
    <string name="advanced_toggle_summaryon">Advanced (Short and Longpress actions)</string>
    <string name="advanced_toggle_summaryoff">Basic (Longpress actions only)</string>
    <string name="collapse_bar_title">Close statusbar</string>
    <string name="collapse_bar_summary">Statusbar closes on action completion</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="colors">Colors</string>
    <string name="clock_color_title">Clock color</string>
    <string name="navbar_width_help_title">NavBar combined width help</string>
    <string name="navbar_width_help_summary">100 is 70\%% of screen width, 5 is 30\%% of screen width. 0 will default to per button width.</string>
    <string name="width_port_title">Combined bar width port</string>
    <string name="width_land_title">Combined bar width land</string>
    <string name="header_lock_clock_title">Magic Clock Widget</string>
    <string name="header_lock_clock_summary">@null</string>
    <string name="title_quick_pulldown">Quick Toggle Expanding</string>
    <string name="title_no_notifications_pulldown">Quick Pulldown Toggles</string>
    <string name="summary_no_notifications_pulldown">Pulldown quick settings if no notifications are present</string>
   <string name="multipane_ui">Enable/Disable Dual panel</string>
   <string name="multipane_ui_summary">This will Enable/Disable Dual panel view (SystemUI will restart)(Orientation change needed)</string>
   <string name="user_mode_ui">UI Mode</string>
   <string name="user_mode_ui_summary">What style to display NavBar and Statusbar(SystemUI will restart)</string>
   <string name="see_through_title">See through</string>
   <string name="see_through_summary">Allows to see the application behind the lock screen.-Must Reset LockScreen Wallpaper</string>
    <string name="lockscreen_custom_background_title">Lock Screen Background</string>
    <string name="screenshot_delay_title">Screenshot delay</string>
    <string name="screenshot_delay_summary">Delay to use after long pressing the screenshot toggle</string>
   <string name="ribbon_settings_title">Shortcuts Options</string>
   <string name="ribbon_settings_summary">@null</string>
    <string name="power_widget">Power Widget</string>
</resources>