<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aokp="http://schemas.android.com/apk/res/com.sourcery.magiccontrol">

    <Preference
        android:key="toggles"
        android:title="@string/toggle_dialog_arrange_title" />

    <ListPreference
        android:entries="@array/toggles_style_entries"
        android:entryValues="@array/toggles_style_values"
        android:key="toggles_style"
        android:summary="@string/toggles_style_summary"
        android:title="@string/toggles_style_title" />

    <ListPreference
        android:entries="@array/toggles_per_row_entries"
        android:entryValues="@array/toggles_per_row_values"
        android:key="toggles_per_row"
        android:summary="@string/toggles_per_row_summary"
        android:title="@string/toggles_per_row_title" />

    <Preference
        android:key="toggle_fav_contact"
        android:summary="@string/toggle_favcontact_summary"
        android:title="@string/toggle_favcontact_title" />

   <ListPreference
        android:entries="@array/screenshot_delay_entries"
        android:entryValues="@array/screenshot_delay_values"
        android:key="screenshot_delay"
        android:summary="@string/screenshot_delay_summary"
        android:title="@string/screenshot_delay_title" />

    <ListPreference
         android:key="quick_pulldown"
         android:title="@string/title_quick_pulldown"
         android:entries="@array/quick_pulldown_entries"
         android:entryValues="@array/quick_pulldown_values"
         android:persistent="false" />

     <CheckBoxPreference
         android:key="no_notifications_pulldown"
         android:title="@string/title_no_notifications_pulldown"
         android:summary="@string/summary_no_notifications_pulldown" />

    <PreferenceCategory
        android:key="custom_toggle"
        android:title="@string/custom_toggle_cat">

        <CheckBoxPreference
            android:key="advanced_toggle_actions"
            android:summaryOff="@string/advanced_toggle_summaryoff"
            android:summaryOn="@string/advanced_toggle_summaryon"
            android:title="@string/advanced_toggle_title" />

        <CheckBoxPreference
            android:key="set_boot_action"
            android:summary="@string/boot_action_summary"
            android:title="@string/boot_action_title" />

        <CheckBoxPreference
            android:key="match_icon_action"
            android:summary="@string/match_icon_action_summary"
            android:title="@string/match_icon_action_title" />

        <ListPreference
            android:entries="@array/collapse_bar_entries"
            android:entryValues="@array/collapse_bar_values"
            android:key="collapse_bar"
            android:title="@string/collapse_bar_title"
            android:summary="@string/collapse_bar_summary" />

        <ListPreference
            android:entries="@array/custom_toggle_dclick_entries"
            android:entryValues="@array/custom_toggle_dclick_values"
            android:key="dclick_action"
            android:title="@string/dclick_action_title"
            android:summary="@string/dclick_action_summary" />

    </PreferenceCategory>
    <PreferenceCategory
        android:key="custom_buttons"
        android:title="@string/custom_button_cat">

        <com.sourcery.magiccontrol.widgets.CustomTogglePref
            android:key="custom_toggle_pref" />

    </PreferenceCategory>

</PreferenceScreen>
