<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

   <header
        android:id="@+id/statusbar"
        android:title="@string/header_statusbar" />
    <header
        android:id="@+id/statusbar_battery"
        android:title="@string/battery"
        android:fragment="com.sourcery.magiccontrol.fragments.StatusBarBattery"
        android:summary="@string/header_summary_battery" />
    
    <header
        android:id="@+id/statusbar_clock"
        android:fragment="com.sourcery.magiccontrol.fragments.StatusBarClock"
        android:summary="@string/header_summary_clock"
        android:title="@string/clock" />

    <header
        android:id="@+id/statusbar_signal"
        android:title="@string/signal"
        android:fragment="com.sourcery.magiccontrol.fragments.StatusBarSignal"
        android:summary="@string/header_summary_signal" />

    <header
        android:id="@+id/user_interface"
	android:fragment="com.sourcery.magiccontrol.fragments.UserInterface"
        android:title="@string/general_ui"
        android:summary="@string/header_summary_general_ui" />
    
    <header
        android:id="@+id/transparency"
	android:fragment="com.sourcery.magiccontrol.fragments.StatusBar"
        android:title="Status Bar Magic" />
    
      <header
        android:id="@+id/tablet"
        android:title="Tablet Mode" />


    <header
        android:id="@+id/tabletmode"
	android:fragment="com.sourcery.magiccontrol.fragments.TabletMode"
        android:title="Tablet Mode Options" />


    <header
        android:id="@+id/navbar"
        android:title="@string/header_navbar" />

     <header
        android:id="@+id/nav_bar"
        android:fragment="com.sourcery.magiccontrol.fragments.Navbar"
        android:title="@string/nav_bar"
        android:summary="@string/header_summary_navigation_bar" />

     <header
        android:id="@+id/ribbon_targets"
        android:fragment="com.sourcery.magiccontrol.fragments.RibbonTargets"
        android:title="@string/ribbon_settings_title"
        android:summary="@string/ribbon_settings_summary" />
      
     <header
        android:id="@+id/pie_control"
        android:fragment="com.sourcery.magiccontrol.fragments.Pie"
        android:summary="@string/pie_controls_summary"
        android:title="@string/pie_controls_title" />
    

     <header
       android:title="Power Menu Options" />


      <header
        android:id="@+id/power_menu"
        android:fragment="com.sourcery.magiccontrol.fragments.PowerMenu"
        android:title="@string/power_menu"
	android:summary="@string/header_summary_power_menu" />

    <header
       android:title="@string/toggles_layout" />

    <header
        android:id="@+id/statusbar_toggles"
        android:fragment="com.sourcery.magiccontrol.fragments.StatusBarToggles"
        android:summary="@string/header_summary_toggles"
        android:title="@string/toggles_layout" />

    <header
        android:id="@+id/power_widget_settings"
        android:fragment="com.sourcery.magiccontrol.fragments.PowerWidget"
        android:title="@string/power_widget"
        android:summary="@string/header_summary_powerwidget" />


    <header android:title="@string/lockscreen_options" />

    
    <header
	android:id="@+id/lockscreens"
	android:fragment="com.sourcery.magiccontrol.fragments.Lockscreens"
	android:title="@string/lockscreen_options"
	android:summary="@string/header_summary_lockscreens" />

   <header
	android:id="@+id/lockscreenstwo"
	android:fragment="com.sourcery.magiccontrol.fragments.Lockscreenstwo"
	android:title="LockScreen BackGround Options"
	android:summary="@string/header_summary_lockscreens" />


    <header
        android:id="@+id/lockscreen_lock_clock"
        android:summary="@string/header_lock_clock_summary"
        android:title="@string/header_lock_clock_title" >
    <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.cyanogenmod.lockclock"
            android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
    </header>
    <header android:title="@string/led_options" />
    
     <header
        android:id="@+id/led"
 	android:fragment="com.sourcery.magiccontrol.fragments.LEDControl"
 	android:title="@string/led_options"
 	android:summary="@string/header_summary_led" />

</preference-headers>
