<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
	    android:key="misc"
	    android:title="@string/misc_short">

         <CheckBoxPreference
	    android:key="disable_bootanimation"	
            android:title="@string/disable_bootanimation_title" />

         <CheckBoxPreference
 	    android:key="status_bar_notif_count"
 	    android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
 	    android:defaultValue="false" />

         <CheckBoxPreference
	    android:key="enable_volume_options"
	    android:title="@string/enable_volume_options" />

         <PreferenceScreen
 	    android:key="display_rotation"
 	    android:fragment="com.sourcery.magiccontrol.fragments.DisplayRotation"
 	    android:title="@string/display_rotation_title" />
        
	</PreferenceCategory>

</PreferenceScreen>
