<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    
    <PreferenceCategory
        android:key="layout"
        android:title="Lock Screen Wallpaper">

       <ListPreference
        android:key="lockscreen_background"
        android:persistent="false"
        android:dialogTitle="@string/lockscreen_custom_background_title"
        android:title="@string/lockscreen_custom_background_title"
        android:entries="@array/lockscreen_background_entries"
        android:entryValues="@array/lockscreen_background_values"/>

   </PreferenceCategory>

   
    <PreferenceCategory
            android:key="Lock_Screen_Settings"
            android:title="LockScreen Settings">

      
    
        <CheckBoxPreference
        android:key="see_through"
        android:title="@string/see_through_title"
        android:summary="@string/see_through_summary" />

    </PreferenceCategory>

    

    
   

  
</PreferenceScreen>
